manifests/argocd/argocd-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    #argocd.argoproj.io/sync-wave: "2"
    #cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  #tls:
  #- hosts:
  # - argocd.ingress.stackmasters.com
  #secretName: argo-tls-secret
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
      #host: argocd.ingress.stackmasters.com
